client side, bootsrap, css, scripting

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,64 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<style>
+    .card-img-top {
+        max-width: 110px;
+        margin: 16px auto;
+    }
+    .card {
+        /*box-shadow: 5px 6px 3px 2px #0861617a;*/
+        transition: all 0.5s ease-in;
+    }
+    
+    .card:hover {
+        box-shadow: 5px 6px 3px 2px #0861617a;
+    }
+</style>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@if(User.Identity.IsAuthenticated) // check if user is logged in
+{
+<h2 class="mb-4">Welcome @User.Identity.Name!</h2>
+
+<div>
+    <div id="noti-alert" class="alert alert-warning alert-dismissible fade" role="alert">
+      <span id="noti-message">
+      </span>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 </div>
+
+<div class="row">
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="/img/rides_def.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Rides</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+    </div>
+    
+    <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="/img/delivery.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Delivery</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Delivery something</a>
+          </div>
+        </div>
+    </div>
+</div>
+}
+else {
+    <h2 class="mb-4">Continue with login!</h2>
+    <a asp-action="Register" asp-controller="Accounts">Register here</a>
+}
+
+
+
+@section scripts {
+    <script src="/js/home.js" ></script>
+}
